# codingdeployment

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  db.py  ingest.py  models.py  pyproject.toml  requirements.txt
content-brief-gen/: brief.py  config.py
content-brief-gen/data_sources/: crop_temps.py  noaa.py  usda.py  web_search.py  yahoo_finance.py
content-brief-gen/llm/: deepseek.py  prompts.py
content-engine/: cli.py  requirements.txt
content-engine/src/: config.py
content-engine/src/editorial/: curator.py  pipeline.py  prompts.py  style_guide.py  writer.py
content-engine/src/llm/: deepseek.py
content-engine/src/signals/: collector.py
content-engine/src/signals/sources/: crop_temps.py  noaa.py  usda.py  web_search.py  yahoo_finance.py
deploy/: nginx-vcpulse.conf  vcpulse-ingest.service  vcpulse-ingest.timer  vcpulse.service
ingestion/: __init__.py  a16z.py  cbinsights.py  firstround.py  github_trending.py  hackernews.py  pitchbook.py  techcrunch.py
src/: engine.py  main.py
src/agents/: __init__.py  base.py  buffett.py  druckenmiller.py  lynch.py
src/db/: models.py
src/market/: signals.py
static/: app.js  index.html  style.css
